--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="sidebar">
       <header><img src="csp.png" alt="Designer's Image" width="120px" height="25px"></header>
       <ul>
-        <li><a href="home1.html"><i class="fas fa-home"></i>Home</a></li>
+        <li><a href="home.html"><i class="fas fa-home"></i>Home</a></li>
         <li><a href="https://script.google.com/a/~/macros/s/AKfycbwY-6hiT6v8y-W5YxlHLHeUz-B34JpoPBek5YV2-MXokGax9eXEmVy9lNsijSvaMMip/exec"><i class="fa-solid fa-square-poll-vertical"></i>Exam Result</a></li>
         <li><a href="x.html"><i class="fa-solid fa-book-open-reader"></i>Study material</a></li>
         <li><a href="https://script.google.com/a/~/macros/s/AKfycbzOQJKPsDw8a5QqXRU1p-28upC6_1yX8KguREQhHcGBScxvHwvCYuzITPMT_paqAJzM/exec"><i class="fa-solid fa-id-card"></i>ID Card</a></li>
