--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       <div id="content">
         <font color="Yellow" size="5" face="Bookman Old Style">Download your progress card <i class="fa-solid fa-circle-down"></i></font><br><br><br>
         <div id="year">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdGsp_EIAedF9Sjf4xCe1XbUiWoc2odMCF2bHqu2y2xuw-8AA/viewform?usp=sf_link" class="year-button"><i class="fa-solid fa-download"></i>First Year</a></P><br>
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQzGiks7-055qSUsopkUwL585wkxT3BGMzyRhrf-VV9WZI_w/viewform?usp=sf_link" class="year-button"><i class="fa-solid fa-download"></i>Second Year</a></p><br>
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgypzz2yjg1aKXU5Kz2puhnabe82YyQutvRcjM2XWX1rOMrQ/viewform?usp=sf_link" class="year-button"><i class="fa-solid fa-download"></i>Third Year</a></p>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenzaXq5w-8_HPWCv8Au3vOUIuPYCkEXu3vv67gI33UYGozjw/viewform?usp=dialog" class="year-button"><i class="fa-solid fa-download"></i>First Year</a></P><br>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeJdyQwC0J4vySOqxNb8SwW8pnxQ0L5LS6Ld4Toqs31Est1vg/viewform?usp=dialog" class="year-button"><i class="fa-solid fa-download"></i>Second Year</a></p><br>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgypzz2yjg1aKXU5Kz2puhnabe82YyQutvRcjM2XWX1rOMrQ/viewform?usp=sf_link" class="year-button"><i class="fa-solid fa-download"></i></a></p>
         </div>
       </div>
     </section>
