--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div id="content">
         <font color="Yellow" size="5" face="Bookman Old Style">Download your progress card <i class="fa-solid fa-circle-down"></i></font><br><br><br>
         <div id="year">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenzaXq5w-8_HPWCv8Au3vOUIuPYCkEXu3vv67gI33UYGozjw/viewform?usp=dialog" class="year-button"><i class="fa-solid fa-download"></i>First Year</a></P><br>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenzaXq5w-8_HPWCv8Au3vOUIuPYCkEXu3vv67gI33UYGozjw/viewform?usp=dialog" class="year-button"><i class="fa-solid fa-download"></i>Progress Card/a></P><br>
         
          
         </div>
