--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
       <br><p><font color="red" size="5" face="Bookman Old Style"><center>Students Progress Card</center></font></p></div>
       <p></p>
       <div id="content">
-        <font color="Yellow" size="5" face="Bookman Old Style">Download your progress card <i class="fa-solid fa-circle-down"></i></font><br><br><br>
+        <font color="Yellow" size="5" face="Bookman Old Style">Download / Entry of Progress Card<i class="fa-solid fa-circle-down"></i></font><br><br><br>
         <div id="year">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSenzaXq5w-8_HPWCv8Au3vOUIuPYCkEXu3vv67gI33UYGozjw/viewform?usp=dialog" class="year-button"><i class="fa-solid fa-download"></i>Progress Card</a></P><br>
+          <p><a href="https://script.google.com/a/~/macros/s/AKfycbzVYBIE6wsqUKfPJVRvpJnnxzTvwmGjgQoVp_Ln3Wj6X6GqlTy2LtQpiJ5jq3no9ewg/exec" class="year-button"><i class="fa-solid fa-download"></i>Progress Card</a></P><br>
         
          
         </div>
