--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <font color="Yellow" size="5" face="Bookman Old Style">Download / Entry of Progress Card<i class="fa-solid fa-circle-down"></i></font><br><br><br>
         <div id="year">
           <p><a href="https://script.google.com/a/~/macros/s/AKfycbzVYBIE6wsqUKfPJVRvpJnnxzTvwmGjgQoVp_Ln3Wj6X6GqlTy2LtQpiJ5jq3no9ewg/exec" class="year-button"><i class="fa-solid fa-download"></i>Progress Card</a></P><br>
-           <p><a href="https://script.google.com/a/~/macros/s/AKfycbyvGiapXKBCJ5NjQZKXYZWo30Z-36cix_9ROIYSA_yBWnY5vqhvAuql29CqLldcKSiVrA/exec" class="year-button"><i class="fa-solid fa-key"></i>Get Password/a></P><br>
+           <p><a href="https://script.google.com/a/~/macros/s/AKfycbyvGiapXKBCJ5NjQZKXYZWo30Z-36cix_9ROIYSA_yBWnY5vqhvAuql29CqLldcKSiVrA/exec" class="year-button"><i class="fa-solid fa-key"></i>Get Password</a></P><br>
         
          
         </div>
